# PaperBreakfast

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  README.md  config.example.yaml  feeds.yaml  main.py  profile.md  pyproject.toml  run_digest.bat
.claude/commands/: adr.md  handoff.md  log.md
docs/: devlog.md  invariants.md
docs/examples/: digest.html
eval/: ground_truth.jsonl
paperbreakfast/: cli.py  config.py  eval.py  pipeline.py  scheduler.py
paperbreakfast/digest/: builder.py  mailer.py
paperbreakfast/enrichment/: enricher.py
paperbreakfast/evaluators/: base.py  factory.py
paperbreakfast/evaluators/backends/: claude.py  claude_batch.py  keyword.py  openai_compat.py
paperbreakfast/evaluators/strategies/: chain_of_thought.py  relevance_json.py
paperbreakfast/feeds/: poller.py
paperbreakfast/models/: db.py
paperbreakfast/templates/: digest.html.jinja2
